--- a/Day3/joke.html
+++ b/Day3/joke.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        function generateJoke(){
+       /*--- function generateJoke(){
             var data = fetch("https://official-joke-api.appspot.com/random_joke")
             data.then((result)=>{
                 result.json().then((res)=>{
@@ -16,7 +16,17 @@
                     Punchline : ${res.punchline}`
                 })
             })
+        }-*/
+      async function generateJoke(){
+            var data =await fetch("https://official-joke-api.appspot.com/random_joke")
+            var jsondata =await data.json()
+            console.log(jsondata);
+            var element = document.getElementById("container")
+                    console.log(element);
+                    element.innerHTML=`Setup : ${jsondata.setup} </br> 
+                    Punchline : ${jsondata.punchline}`
         }
+
     </script>
 </head>
 <body>
